@@ -3,11 +3,9 @@ package com.github.saphyra.apphub.service.skyxplore.game.service.planet.storage;
 import com.github.saphyra.apphub.lib.skyxplore.data.gamedata.StorageType;
 import com.github.saphyra.apphub.lib.skyxplore.data.gamedata.resource.ResourceData;
 import com.github.saphyra.apphub.lib.skyxplore.data.gamedata.resource.ResourceDataService;
+import com.github.saphyra.apphub.service.skyxplore.game.domain.data.GameData;
 import com.github.saphyra.apphub.service.skyxplore.game.domain.data.allocated_resource.AllocatedResource;
-import com.github.saphyra.apphub.service.skyxplore.game.domain.commodity.storage.AllocatedResources;
-import com.github.saphyra.apphub.service.skyxplore.game.domain.commodity.storage.StorageDetails;
-import com.github.saphyra.apphub.service.skyxplore.game.domain.data.planet.Planet;
-import org.junit.jupiter.api.BeforeEach;
+import com.github.saphyra.apphub.service.skyxplore.game.domain.data.allocated_resource.AllocatedResources;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
 import org.mockito.InjectMocks;
@@ -15,6 +13,8 @@ import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
 
 import java.util.Arrays;
+import java.util.List;
+import java.util.UUID;
 
 import static org.assertj.core.api.Assertions.assertThat;
 import static org.mockito.BDDMockito.given;
@@ -24,6 +24,7 @@ public class AllocatedResourceAmountQueryServiceTest {
     private static final String DATA_ID_1 = "data-id-1";
     private static final String DATA_ID_2 = "data-id-2";
     private static final Integer AMOUNT = 234;
+    private static final UUID LOCATION = UUID.randomUUID();
 
     @Mock
     private ResourceDataService resourceDataService;
@@ -32,40 +33,40 @@ public class AllocatedResourceAmountQueryServiceTest {
     private AllocatedResourceAmountQueryService underTest;
 
     @Mock
+    private AllocatedResources allocatedResources;
+
+    @Mock
+    private GameData gameData;
+
+    @Mock
     private AllocatedResource allocatedResource1;
 
     @Mock
     private AllocatedResource allocatedResource2;
 
     @Mock
-    private Planet planet;
-
-    @Mock
-    private StorageDetails storageDetails;
-
-    @Mock
     private ResourceData resourceData;
 
-    @BeforeEach
-    public void setUp() {
-        given(planet.getStorageDetails()).willReturn(storageDetails);
-    }
-
     @Test
-    public void byDataIdAndPlanet() {
-        given(storageDetails.getAllocatedResources()).willReturn(new AllocatedResources(Arrays.asList(allocatedResource1, allocatedResource2)));
+    public void byLocationAndDataId() {
+        given(gameData.getAllocatedResources()).willReturn(allocatedResources);
+        given(allocatedResources.getByLocationAndDataId(LOCATION, DATA_ID_1)).willReturn(List.of(allocatedResource1));
+
+
         given(allocatedResource1.getDataId()).willReturn(DATA_ID_1);
         given(allocatedResource2.getDataId()).willReturn(DATA_ID_2);
         given(allocatedResource1.getAmount()).willReturn(AMOUNT);
 
-        int result = underTest.getAllocatedResourceAmount(DATA_ID_1, planet);
+        int result = underTest.getAllocatedResourceAmount(gameData, LOCATION, DATA_ID_1);
 
         assertThat(result).isEqualTo(AMOUNT);
     }
 
     @Test
-    public void byPlanetAndStorageType() {
-        given(storageDetails.getAllocatedResources()).willReturn(new AllocatedResources(Arrays.asList(allocatedResource1, allocatedResource2)));
+    public void byLocationAndStorageType() {
+        given(gameData.getAllocatedResources()).willReturn(allocatedResources);
+        given(allocatedResources.getByLocation(LOCATION)).willReturn(List.of(allocatedResource1, allocatedResource2));
+
         given(resourceDataService.getByStorageType(StorageType.BULK)).willReturn(Arrays.asList(resourceData));
         given(resourceData.getId()).willReturn(DATA_ID_1);
 
@@ -73,7 +74,7 @@ public class AllocatedResourceAmountQueryServiceTest {
         given(allocatedResource2.getDataId()).willReturn(DATA_ID_2);
         given(allocatedResource1.getAmount()).willReturn(AMOUNT);
 
-        int result = underTest.getAllocatedResourceAmount(planet, StorageType.BULK);
+        int result = underTest.getAllocatedResourceAmount(gameData, LOCATION, StorageType.BULK);
 
         assertThat(result).isEqualTo(AMOUNT);
     }
