@@ -3,11 +3,9 @@ package com.github.saphyra.apphub.service.skyxplore.game.service.planet.storage;
 import com.github.saphyra.apphub.lib.skyxplore.data.gamedata.StorageType;
 import com.github.saphyra.apphub.lib.skyxplore.data.gamedata.resource.ResourceData;
 import com.github.saphyra.apphub.lib.skyxplore.data.gamedata.resource.ResourceDataService;
+import com.github.saphyra.apphub.service.skyxplore.game.domain.data.GameData;
 import com.github.saphyra.apphub.service.skyxplore.game.domain.data.reserved_storage.ReservedStorage;
-import com.github.saphyra.apphub.service.skyxplore.game.domain.commodity.storage.ReservedStorages;
-import com.github.saphyra.apphub.service.skyxplore.game.domain.commodity.storage.StorageDetails;
-import com.github.saphyra.apphub.service.skyxplore.game.domain.data.planet.Planet;
-import org.junit.jupiter.api.BeforeEach;
+import com.github.saphyra.apphub.service.skyxplore.game.domain.data.reserved_storage.ReservedStorages;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
 import org.mockito.InjectMocks;
@@ -15,6 +13,8 @@ import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
 
 import java.util.Arrays;
+import java.util.List;
+import java.util.UUID;
 
 import static org.assertj.core.api.Assertions.assertThat;
 import static org.mockito.BDDMockito.given;
@@ -25,19 +25,13 @@ public class ReservedStorageQueryServiceTest {
     private static final String DATA_ID_2 = "data-id-2";
     private static final Integer AMOUNT = 3214;
     private static final Integer MASS = 25;
-    private static final String DATA_ID_3 = "data-id-3";
+    private static final UUID LOCATION = UUID.randomUUID();
 
     @Mock
     private ResourceDataService resourceDataService;
 
     @InjectMocks
     private ReservedStorageQueryService underTest;
-
-    @Mock
-    private Planet planet;
-
-    @Mock
-    private StorageDetails storageDetails;
 
     @Mock
     private ReservedStorage reservedStorage1;
@@ -51,42 +45,45 @@ public class ReservedStorageQueryServiceTest {
     @Mock
     private ResourceData resourceData;
 
-    @BeforeEach
-    public void setUp() {
-        given(planet.getStorageDetails()).willReturn(storageDetails);
-    }
+    @Mock
+    private GameData gameData;
+
+    @Mock
+    private ReservedStorages reservedStorages;
 
     @Test
-    public void getReservedAmount_byDataIdAndPlanet() {
-        given(storageDetails.getReservedStorages()).willReturn(new ReservedStorages(Arrays.asList(reservedStorage1, reservedStorage2)));
+    public void getReservedAmount_byLocationAndDataId() {
+        given(gameData.getReservedStorages()).willReturn(reservedStorages);
+        given(reservedStorages.getByLocation(LOCATION)).willReturn(List.of(reservedStorage1, reservedStorage2));
         given(reservedStorage1.getDataId()).willReturn(DATA_ID_1);
         given(reservedStorage2.getDataId()).willReturn(DATA_ID_2);
         given(reservedStorage1.getAmount()).willReturn(AMOUNT);
 
-        int result = underTest.getReservedAmount(DATA_ID_1, planet);
+        int result = underTest.getReservedAmount(gameData, LOCATION, DATA_ID_1);
 
         assertThat(result).isEqualTo(AMOUNT);
     }
 
     @Test
-    public void getReservedAmount_byPlanetAndStorageType() {
-        given(storageDetails.getReservedStorages()).willReturn(new ReservedStorages(Arrays.asList(reservedStorage1, reservedStorage2, reservedStorage3)));
+    public void getReservedAmount_byLocationAndStorageType() {
+        given(gameData.getReservedStorages()).willReturn(reservedStorages);
+        given(reservedStorages.getByLocation(LOCATION)).willReturn(List.of(reservedStorage1, reservedStorage2, reservedStorage3));
         given(resourceData.getId()).willReturn(DATA_ID_1);
         given(resourceDataService.getByStorageType(StorageType.BULK)).willReturn(Arrays.asList(resourceData));
         given(reservedStorage1.getDataId()).willReturn(DATA_ID_1);
         given(reservedStorage1.getAmount()).willReturn(AMOUNT);
         given(reservedStorage2.getDataId()).willReturn(DATA_ID_2);
         given(reservedStorage3.getDataId()).willReturn(DATA_ID_1);
-        given(reservedStorage3.getLocationType()).willReturn(LocationType.PRODUCTION);
 
-        int result = underTest.getReservedAmount(planet, StorageType.BULK);
+        int result = underTest.getReservedAmount(gameData, LOCATION, StorageType.BULK);
 
         assertThat(result).isEqualTo(AMOUNT);
     }
 
     @Test
     public void getReservedStorageCapacity() {
-        given(storageDetails.getReservedStorages()).willReturn(new ReservedStorages(Arrays.asList(reservedStorage1, reservedStorage2, reservedStorage3)));
+        given(gameData.getReservedStorages()).willReturn(reservedStorages);
+        given(reservedStorages.getByLocation(LOCATION)).willReturn(List.of(reservedStorage1, reservedStorage2, reservedStorage3));
         given(reservedStorage1.getDataId()).willReturn(DATA_ID_1);
         given(reservedStorage2.getDataId()).willReturn(DATA_ID_2);
         given(reservedStorage1.getAmount()).willReturn(AMOUNT);
@@ -95,9 +92,8 @@ public class ReservedStorageQueryServiceTest {
         given(resourceData.getMass()).willReturn(MASS);
         given(resourceDataService.get(DATA_ID_1)).willReturn(resourceData);
         given(reservedStorage3.getDataId()).willReturn(DATA_ID_1);
-        given(reservedStorage3.getLocationType()).willReturn(LocationType.PRODUCTION);
 
-        int result = underTest.getReservedStorageCapacity(planet, StorageType.BULK);
+        int result = underTest.getReservedStorageCapacity(gameData, LOCATION, StorageType.BULK);
 
         assertThat(result).isEqualTo(AMOUNT * MASS);
     }
